k8s/cluster-obs/loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  type: NodePort
  selector:
    app: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
      nodePort: 30100 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:3.0.0
        args:
          - "-config.file=/etc/loki/loki.yaml"
        ports:
        - containerPort: 3100
        volumeMounts:
        - name: loki-config-vol
          mountPath: /etc/loki
      volumes:
      - name: loki-config-vol
        configMap:
          name: loki-config
