k8s/cluster-obs/tempo.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo
spec:
  selector:
    app: tempo
  ports:
    - name: otlp-grpc
      port: 4317
    - name: http
      port: 3200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      containers:
      - name: tempo
        image: grafana/tempo:latest
        args: 
          - "-config.file=/etc/tempo.yaml"
        ports:
        - containerPort: 4317
        - containerPort: 3200
        volumeMounts:
        - name: tempo-config-vol
          mountPath: /etc/tempo.yaml
          subPath: tempo.yaml
      volumes:
      - name: tempo-config-vol
        configMap:
          name: tempo-config
